# Speakeasy

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
client/: Encoder.cpp  Encoder.hpp  SoundDevice.cpp  SpeakEngine.cpp  SpeakEngine.hpp  client.cpp  client.hpp  device.cpp  device.hpp  main.cpp  voice.cpp  voice.hpp
client-ui/: client.cpp  client.hpp  encode.cpp  voice.hpp
common/: linux_kbhit.h  rakChat.h
guiclient/: CClient.cpp  CClient_impl.hpp  Client.cpp  GUIClient.cpp  GUIClient.hpp  main.cpp
microui/: render.c  render.h
server/: RakChatChannel.cpp  RakChatChannel.hpp  RakChatUser.cpp  RakChatUser.hpp  server.cpp  server.hpp
